# mib

./: Cargo.toml
migrations/2019-03-22-043539_create_notes/: down.sql  up.sql
migrations/2019-03-22-044742_index_notes_on_note_id/: down.sql  up.sql
migrations/2019-03-22-045136_add_initial_location_column_to_notes/: down.sql  up.sql
migrations/2019-03-22-045359_add_current_location_column_to_notes/: down.sql  up.sql
src/: main.rs  schema.rs
