[package]
name = "mib"
version = "0.1.0"
authors = ["clarkenciel <clarkenciel@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
geo = "0.12.0"
dotenv = "0.9.0"
r2d2 = "^0.8"
redis = "^0.9"
r2d2_redis = "^0.8"
diesel = "^1.4"
r2d2-diesel = "^1.0"
uuid = "^0.7"
