[package]
name = "mib"
version = "0.1.0"
authors = ["clarkenciel <clarkenciel@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
dotenv = "0.9.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
warp = "0.1.14"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "^0.7", features = ["serde", "v4"] }
geo = "0.12.0"

r2d2 = "^0.8"
redis = "^0.9"
r2d2_redis = "^0.8"
diesel = "^1.4"
r2d2-diesel = "^1.0"

